# web-proje

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  web-projesi.code-workspace
.github/workflows/: docs.yml  publish.yml
backend/: app.py
backend/routers/: data_routes.py
docs/: PYPI_YAYIN_REHBERI.md  index.md  installation.md  usage.md
docs/statistics/: index.md  plan.md  practical-statistics.md  resources.md
frontend/: app.js  index.html  styles.css
installation/: index.html
scripts/: sync_practical_statistics.sh
search/: search_index.json
src/tutorial_package/: main.py
usage/: index.html
